--- a/Trainer/Trainer.vcxproj
+++ b/Trainer/Trainer.vcxproj
@@ -19,6 +19,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
+    <VcpkgTriplet Condition="'$(Platform)'=='Win32'">x86-windows-static</VcpkgTriplet>
+    <VcpkgTriplet Condition="'$(Platform)'=='x64'">x64-windows-static</VcpkgTriplet>
     <VCProjectVersion>16.0</VCProjectVersion>
     <ProjectGuid>{3F864D06-34F7-4D56-B0E2-DADED46CFABB}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
