--- a/TrainingDataExtractor/TrainingDataExtractor.vcxproj
+++ b/TrainingDataExtractor/TrainingDataExtractor.vcxproj
@@ -19,6 +19,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
+    <VcpkgTriplet Condition="'$(Platform)'=='Win32'">x86-windows-static</VcpkgTriplet>
+    <VcpkgTriplet Condition="'$(Platform)'=='x64'">x64-windows-static</VcpkgTriplet>
     <VCProjectVersion>16.0</VCProjectVersion>
     <ProjectGuid>{64C27BBD-50BD-430A-9C87-42D18910FF77}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
