Modified bubble candidate detection (should detect work on all white bubbles)

--- a/CommonFiles/CommonFiles.vcxitems.filters
+++ b/CommonFiles/CommonFiles.vcxitems.filters
@@ -308,6 +308,9 @@
     <ClCompile Include="$(MSBuildThisFileDirectory)psd_sdk\Psdminiz.c">
       <Filter>psd_sdk</Filter>
     </ClCompile>
+    <ClCompile Include="$(MSBuildThisFileDirectory)MSERBubbleDetector.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="$(MSBuildThisFileDirectory)frozen_east_text_detection.pb">
